--- a/index.html
+++ b/index.html
@@ -83,56 +83,56 @@
   </div>
 
   <script>
-    // ====== Toggle this while testing ======
+    // ---- Debug switch (shows why it didn't fire) ----
     const DEBUG = true;
   
-    // ====== Math helpers ======
+    // ---- Math utils ----
     const TAU = Math.PI * 2;
     const DEG = Math.PI / 180;
     const clamp = (x,a,b)=>Math.max(a,Math.min(b,x));
     const unwrap = d => (d > Math.PI ? d - TAU : d < -Math.PI ? d + TAU : d);
     const hypot3 = (x,y,z)=>Math.sqrt(x*x+y*y+z*z);
     function cross(a,b){ return {x:a.y*b.z - a.z*b.y, y:a.z*b.x - a.x*b.z, z:a.x*b.y - a.y*b.x}; }
-    function norm(v){ const n = hypot3(v.x,v.y,v.z)||1; return {x:v.x/n,y:v.y/n,z:v.z/n}; }
+    function norm(v){ const n=hypot3(v.x,v.y,v.z)||1; return {x:v.x/n,y:v.y/n,z:v.z/n}; }
     function median(arr){ if(!arr.length) return 0; const s=[...arr].sort((a,b)=>a-b); const m=Math.floor(s.length/2); return s.length%2?s[m]:(s[m-1]+s[m])/2; }
     function mad(arr, m=null){ if(!arr.length) return 0; if(m==null) m=median(arr); const dev=arr.map(x=>Math.abs(x-m)); return median(dev); }
   
-    class AccelCircleStable {
+    class GentleCircleDetector {
       constructor(canvas, dotEl){
         this.canvas = canvas; this.ctx = canvas.getContext('2d'); this.dotEl = dotEl;
   
-        // ----- Tunables (gentle but robust) -----
-        this.accPlanarMin   = 0.8;    // m/s^2 (lower = more sensitive)
-        this.minOmega       = 0.8;    // rad/s (~46°/s)
-        this.progressTarget = TAU*0.90; // ~324°
-        this.segMinDur      = 0.25;   // s
-        this.segMaxDur      = 8.00;   // s
+        // -------- Tunables (made friendlier) --------
+        // Detect "almost full" revolution
+        this.progressTarget   = TAU * 0.85;  // ~306° (more forgiving)
+        this.segMinDur        = 0.25;        // s (fastest allowed rev)
+        this.segMaxDur        = 10.0;        // s (slow elbow circles OK)
+        this.signCoherenceMin = 0.70;        // mostly one direction
   
-        // Radius sanity + stability (anti-shake)
-        this.rMin = 0.04;  // 4 cm
-        this.rMax = 0.35;  // 35 cm
-        this.rWin = 1.0;   // s window
-        this.rCoVMax = 0.40;
+        // Adaptive gating via centripetal relation r ≈ a/ω²
+        this.omegaMin         = 0.40;        // rad/s (~23°/s) allow slow turns
+        this.aNoiseFloor      = 0.10;        // m/s²: ignore near-zero magnitude
+        this.rMin             = 0.04;        // m (4 cm)
+        this.rMax             = 0.45;        // m (45 cm, elbow)
+        this.rWin             = 1.2;         // s window for radius stability
+        this.rCoVMax          = 0.45;        // robust CoV (MAD-based)
   
-        // Anti “spin on table” (gyro yaw veto)
-        this.yawSpinVeto = 120;   // deg/s about gravity
-        this.spinLinearThresh = 1.1; // m/s^2 (if planar accel below this + high yaw → veto)
+        // Anti "spin on table" (gyro yaw veto)
+        this.yawSpinVeto      = 100;         // deg/s about gravity
+        this.spinLinearThresh = 1.0;         // m/s²: if planar < this + high yaw => veto
   
-        // Gravity LPF
-        this.gTau = 0.25; // s
-        this.g = null;    // {x,y,z}
-        this.lastT = 0;
+        // Gravity LPF (no gyro needed to estimate g)
+        this.gTau = 0.25;                    // s
   
-        // State
-        this.uLP = 0; this.vLP = 0; this.avLP = 0;
+        // -------- State --------
+        this.g = null; this.lastT = 0;
+        this.uLP = 0; this.vLP = 0;          // smoothed planar accel
         this.theta = 0; this.prevTheta = null;
         this.thetaStart = 0; this.progress = 0;
         this.posDur = 0; this.negDur = 0;
-        this.segStartT = null; this.lastGoodMs = 0;
-        this.gapMsAllow = 280;
+        this.segStartT = null; this.lastGoodMs = 0; this.gapMsAllow = 320;
   
-        this.rBuf = [];   // radius samples {t,r}
-        this.lastRR = {x:0,y:0,z:0}; // for spin veto only
+        this.rBuf = []; // {t, r}
+        this.lastRR = {x:0,y:0,z:0};         // gyro (for veto only)
         this.lastDetectMs = 0; this.cooldownMs = 1500;
   
         // UI/canvas
@@ -141,7 +141,6 @@
         window.addEventListener('resize', () => { this.resize(); this.resetCanvas(); }, {passive:true});
         this.resize(); this.resetCanvas();
   
-        // Lightweight debug line
         this.debugEl = document.getElementById('debugInfo');
         if (!this.debugEl && DEBUG) {
           const host = document.querySelector('.container') || document.body;
@@ -158,10 +157,8 @@
         this.canvas.height = Math.floor(ch*this.dpr);
         this.w=this.canvas.width; this.h=this.canvas.height;
         this.cx=this.w/2; this.cy=this.h/2;
-  
-        this.padPx = 6*this.dpr;
-        this.R = Math.min(this.cx, this.cy) - this.padPx;   // drawable radius
-        this.ring = this.R * 0.60;                          // fixed ring for drawing
+        this.padPx=6*this.dpr; this.R=Math.min(this.cx,this.cy)-this.padPx;
+        this.ring = this.R * 0.60; // fixed ring we draw on
   
         this.ctx.setTransform(1,0,0,1,0,0);
         this.ctx.lineWidth=2*this.dpr;
@@ -171,20 +168,12 @@
       }
   
       resetCanvas(){
-        // boundary
         this.ctx.clearRect(0,0,this.w,this.h);
-        this.ctx.save();
-        this.ctx.globalAlpha=0.18;
-        this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R,0,TAU); this.ctx.stroke();
-        this.ctx.restore();
-  
-        // clip
-        this.ctx.save();
-        this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R - this.ctx.lineWidth*0.5, 0, TAU);
-        this.ctx.clip();
+        this.ctx.save(); this.ctx.globalAlpha=0.18;
+        this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R,0,TAU); this.ctx.stroke(); this.ctx.restore();
+        this.ctx.save(); this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R - this.ctx.lineWidth*0.5, 0, TAU); this.ctx.clip();
         this.pathStarted=false;
   
-        // reset state
         this.prevTheta=null; this.theta=0; this.thetaStart=0;
         this.progress=0; this.posDur=0; this.negDur=0;
         this.segStartT=null; this.lastGoodMs=0; this.rBuf.length=0;
@@ -199,48 +188,39 @@
   
         if (rr) this.lastRR = {x: rr.beta||0, y: rr.gamma||0, z: rr.alpha||0};
   
-        // ---- Robust gravity init/update ----
-        // Prefer accelerationIncludingGravity; fallback to acceleration when its magnitude ~ g
-        const axg = accG && Number.isFinite(accG.x) ? accG.x : null;
-        const ayg = accG && Number.isFinite(accG.y) ? accG.y : null;
-        const azg = accG && Number.isFinite(accG.z) ? accG.z : null;
-        const haveAccG = axg!==null && ayg!==null && azg!==null;
-  
+        // ---- Gravity init/update (robust) ----
+        const haveG = accG && Number.isFinite(accG.x);
         if (!this.g) {
-          if (haveAccG) {
-            this.g = {x:axg, y:ayg, z:azg};
-          } else if (acc && Number.isFinite(acc.x) && Number.isFinite(acc.y) && Number.isFinite(acc.z)) {
-            const mag = hypot3(acc.x, acc.y, acc.z);
-            if (mag > 7.5) this.g = {x:acc.x, y:acc.y, z:acc.z}; // assume mostly gravity at start
-            else return; // wait until we can initialize
-          } else {
-            return; // no usable data yet
-          }
+          if (haveG) this.g = {x:accG.x, y:accG.y, z:accG.z};
+          else if (acc && Number.isFinite(acc.x)) {
+            const mag = hypot3(acc.x,acc.y,acc.z);
+            if (mag > 7.5) this.g = {x:acc.x, y:acc.y, z:acc.z};
+            else return;
+          } else return;
         } else {
-          const alpha = Math.exp(-dt/this.gTau);
-          if (haveAccG) {
-            this.g.x = alpha*this.g.x + (1-alpha)*axg;
-            this.g.y = alpha*this.g.y + (1-alpha)*ayg;
-            this.g.z = alpha*this.g.z + (1-alpha)*azg;
+          const a = Math.exp(-dt/this.gTau);
+          if (haveG) {
+            this.g.x = a*this.g.x + (1-a)*accG.x;
+            this.g.y = a*this.g.y + (1-a)*accG.y;
+            this.g.z = a*this.g.z + (1-a)*accG.z;
           } else if (acc && Number.isFinite(acc.x)) {
-            // Conservative fallback: only update when near |g|
             const mag = hypot3(acc.x,acc.y,acc.z);
             if (mag > 8.5 && mag < 11.5) {
-              this.g.x = alpha*this.g.x + (1-alpha)*acc.x;
-              this.g.y = alpha*this.g.y + (1-alpha)*acc.y;
-              this.g.z = alpha*this.g.z + (1-alpha)*acc.z;
+              this.g.x = a*this.g.x + (1-a)*acc.x;
+              this.g.y = a*this.g.y + (1-a)*acc.y;
+              this.g.z = a*this.g.z + (1-a)*acc.z;
             }
           }
         }
   
-        // ---- Linear accel and planar projection (ALWAYS compute & draw) ----
+        // ---- Linear accel & planar projection ----
         let ax=0, ay=0, az=0;
         if (acc && Number.isFinite(acc.x)) { ax=acc.x; ay=acc.y; az=acc.z; }
-        else if (haveAccG) { ax=axg - this.g.x; ay=ayg - this.g.y; az=azg - this.g.z; }
+        else if (haveG) { ax=accG.x - this.g.x; ay=accG.y - this.g.y; az=accG.z - this.g.z; }
   
         const gn = norm(this.g);
         const ref = Math.abs(gn.z)<0.9 ? {x:0,y:0,z:1} : {x:1,y:0,z:0};
-        const e1 = norm(cross(gn, ref)), e2 = cross(gn, e1);
+        const e1 = norm(cross(gn,ref)), e2 = cross(gn,e1);
   
         const dotg = ax*gn.x + ay*gn.y + az*gn.z;
         const px = ax - dotg*gn.x, py = ay - dotg*gn.y, pz = az - dotg*gn.z;
@@ -248,51 +228,57 @@
         const u = px*e1.x + py*e1.y + pz*e1.z;
         const v = px*e2.x + py*e2.y + pz*e2.z;
   
-        // Smooth planar vector (keeps dot calm; DRAW ALWAYS)
-        const beta = Math.exp(-dt/0.06); // ~60 ms
+        // Smooth planar vector
+        const beta = Math.exp(-dt/0.06); // ~60ms
         this.uLP = beta*this.uLP + (1-beta)*u;
         this.vLP = beta*this.vLP + (1-beta)*v;
         const aPlanar = Math.hypot(this.uLP, this.vLP);
   
+        // Angle and angular rate from planar accel
         const thetaNow = Math.atan2(this.vLP, this.uLP);
-        if (this.prevTheta == null) this.prevTheta = thetaNow;
+        if (this.prevTheta==null) this.prevTheta = thetaNow;
         const dtheta = unwrap(thetaNow - this.prevTheta);
         const omega = Math.abs(dtheta)/dt;
   
-        // Draw current point on a fixed ring so you SEE motion even if gate=false
-        const x = this.cx + this.ring * Math.cos(thetaNow);
-        const y = this.cy + this.ring * Math.sin(thetaNow);
-        if (!this.pathStarted) { this.ctx.beginPath(); this.ctx.moveTo(x,y); this.pathStarted = true; }
+        // Draw path regardless of gating (so you always see motion)
+        const x = this.cx + this.ring*Math.cos(thetaNow);
+        const y = this.cy + this.ring*Math.sin(thetaNow);
+        if (!this.pathStarted) { this.ctx.beginPath(); this.ctx.moveTo(x,y); this.pathStarted=true; }
         else { this.ctx.lineTo(x,y); this.ctx.stroke(); }
         this._lastXPix = x; this._lastYPix = y;
         this._moveDot();
   
-        // ---- Radius via centripetal relation (for shake rejection)
+        // ---- Radius estimate & stability (reject shakes/jerks) ----
         let rInst = Infinity;
-        if (omega >= this.minOmega) rInst = aPlanar/(omega*omega + 1e-9);
+        if (omega >= this.omegaMin && aPlanar >= this.aNoiseFloor) rInst = aPlanar / (omega*omega + 1e-9);
         this._pushRadius(now, rInst);
         const rStats = this._radiusStats(now);
         const radiusOk = rStats.valid &&
                          rStats.med >= this.rMin && rStats.med <= this.rMax &&
                          rStats.cov <= this.rCoVMax;
   
-        // ---- Anti-spin veto (spin in place on table)
+        // ---- Anti-spin veto (phone spinning about gravity) ----
         const w_par_gyro = (this.lastRR.x*gn.x + this.lastRR.y*gn.y + this.lastRR.z*gn.z); // deg/s
         const spinVeto = Math.abs(w_par_gyro) > this.yawSpinVeto && aPlanar < this.spinLinearThresh;
   
-        // ---- Gate for PROGRESS/DETECTION (drawing is independent)
-        const gate = !spinVeto && (aPlanar >= this.accPlanarMin) && (omega >= this.minOmega) && radiusOk;
+        // ---- Gate for PROGRESS/DETECTION (adaptive; no hard accel floor) ----
+        const gate = !spinVeto &&
+                     omega >= this.omegaMin &&
+                     aPlanar >= this.aNoiseFloor &&
+                     radiusOk;
   
-        // Debug line
+        // Debug line (why didn't it fire?)
         if (DEBUG && this.debugEl) {
           this.debugEl.textContent =
-            `gate:${gate?'1':'0'}  a:${aPlanar.toFixed(2)}  ω:${(omega/DEG).toFixed(0)}°/s  ` +
-            `r:${isFinite(rInst)?rInst.toFixed(2):'∞'}  r_med:${rStats.med.toFixed(2)}  r_cov:${rStats.cov.toFixed(2)}  ` +
-            `yaw:${w_par_gyro.toFixed(0)}°/s veto:${spinVeto?'Y':'N'}`;
+            `gate:${gate?'1':'0'}  prog:${(Math.min(1, Math.abs(this.theta - this.thetaStart)/this.progressTarget)*100|0)}%`+
+            `  a:${aPlanar.toFixed(2)}  ω:${(omega/DEG).toFixed(0)}°/s`+
+            `  r:${isFinite(rInst)?rInst.toFixed(2):'∞'}  r_med:${rStats.med.toFixed(2)} r_cov:${rStats.cov.toFixed(2)}`+
+            `  yaw:${w_par_gyro.toFixed(0)}°/s veto:${spinVeto?'Y':'N'}`;
         }
   
+        // ---- Integrate & detect ----
         if (gate) {
-          if (this.segStartT==null) { this.segStartT = now; this.thetaStart = this.theta; this.posDur=0; this.negDur=0; }
+          if (this.segStartT==null) { this.segStartT=now; this.thetaStart=this.theta; this.posDur=0; this.negDur=0; }
           this.theta += dtheta;
           if (dtheta>0) this.posDur += dt; else if (dtheta<0) this.negDur += dt;
   
@@ -301,16 +287,15 @@
           this.progress = Math.min(1, traveled / this.progressTarget);
           this._renderProgress();
   
-          // Edge-trigger: as soon as we cross 100%, verify & fire
+          // Edge trigger crossing 100%
           if (prevProg < 1 && this.progress >= 1) this._maybeDetect(now, rStats);
           this.lastGoodMs = now;
         } else {
-          // allow short gaps, otherwise reset the segment (keeps drawing)
           if (this.segStartT!=null) {
             if (!this.lastGoodMs) this.lastGoodMs = now;
             if ((now - this.lastGoodMs) > this.gapMsAllow) this._resetSegment(now);
           }
-          // soften the progress so 100% doesn't stick visually
+          // gentle decay so bar doesn't “stick”
           this.progress = Math.max(0, this.progress - 0.02);
           this._renderProgress();
         }
@@ -318,6 +303,7 @@
         this.prevTheta = thetaNow;
       }
   
+      // ---- rolling radius stats ----
       _pushRadius(t, r){
         const start = t - this.rWin*1000;
         if (isFinite(r)) this.rBuf.push({t, r: clamp(r, 0, 10)});
@@ -335,12 +321,12 @@
   
       _maybeDetect(now, rStats){
         const dur = this.segStartT ? (now - this.segStartT)/1000 : 0;
-        const totalTurn = (this.posDur + this.negDur);
+        const totalTurn = this.posDur + this.negDur;
         const signCoh = totalTurn>0 ? Math.max(this.posDur, this.negDur)/totalTurn : 0;
         const withinDur = (dur>=this.segMinDur && dur<=this.segMaxDur);
         const cooled = (now - this.lastDetectMs) > this.cooldownMs;
   
-        if (withinDur && signCoh >= 0.80 && rStats.valid && rStats.cov <= this.rCoVMax && cooled) {
+        if (withinDur && signCoh >= this.signCoherenceMin && rStats.valid && rStats.cov <= this.rCoVMax && cooled) {
           this.lastDetectMs = now;
           this._onDetected();
           this._resetSegment(now);
@@ -372,32 +358,26 @@
       }
   
       _onDetected(){
-        // flash
         document.body.style.background='linear-gradient(135deg, #4CAF50 0%, #45a049 100%)';
         setTimeout(()=>{ document.body.style.background='linear-gradient(135deg, #667eea 0%, #764ba2 100%)'; }, 700);
   
-        // status
         const status=document.getElementById('status');
-        if (status){ status.textContent='🎉 FULL WRIST REVOLUTION'; status.className='status detecting';
-          setTimeout(()=>{ status.textContent='Listening… draw a small wrist circle'; status.className='status active'; }, 1500);
+        if (status){ status.textContent='🎉 FULL REVOLUTION'; status.className='status detecting';
+          setTimeout(()=>{ status.textContent='Listening… draw a small wrist/elbow circle'; status.className='status active'; }, 1500);
         }
   
-        // history (robust)
         const history=document.getElementById('history');
         if (history){
-          const div=document.createElement('div');
-          div.className='detection-item';
-          div.textContent=new Date().toLocaleTimeString()+': Full revolution';
-          history.appendChild(div);
+          const div=document.createElement('div'); div.className='detection-item';
+          div.textContent=new Date().toLocaleTimeString()+': Full revolution'; history.appendChild(div);
         }
-  
         if ('vibrate' in navigator) navigator.vibrate([160,100,160]);
         console.log('✅ Full revolution detected');
       }
     }
   
-    // ====== Wiring ======
-    let tracer=null, isActive=false;
+    // ---- Wiring ----
+    let detector=null, isActive=false;
   
     function startDetection(){
       const needsPerm = typeof DeviceMotionEvent!=='undefined' && typeof DeviceMotionEvent.requestPermission==='function';
@@ -410,7 +390,7 @@
   
     function start(){
       if (isActive) return;
-      tracer = new AccelCircleStable(
+      detector = new GentleCircleDetector(
         document.getElementById('pathCanvas'),
         document.getElementById('gyroDot')
       );
@@ -418,7 +398,7 @@
       isActive=true;
   
       const st=document.getElementById('status');
-      if (st){ st.textContent='Listening… draw a small wrist circle'; st.className='status active'; }
+      if (st){ st.textContent='Listening… draw a small wrist/elbow circle'; st.className='status active'; }
       document.getElementById('startBtn').style.display='none';
       document.getElementById('stopBtn').style.display='inline-block';
     }
@@ -434,10 +414,10 @@
     }
   
     function onMotion(e){
-      tracer.addSample(
+      detector.addSample(
         e.acceleration || null,
         e.accelerationIncludingGravity || null,
-        e.rotationRate || null     // only used for the spin veto
+        e.rotationRate || null // gyro only used for spin veto
       );
     }
   
@@ -445,12 +425,8 @@
       const h=document.getElementById('history'); if(h) h.innerHTML='';
       document.getElementById('confidenceBar').style.width='0%';
       document.getElementById('confidenceText').textContent='Revolution progress: 0%';
-      if (tracer) tracer.resetCanvas();
+      if (detector) detector.resetCanvas();
     }
   </script>
-  
-  
-  
-  
 </body>
 </html>
