--- a/index.html
+++ b/index.html
@@ -83,256 +83,171 @@
   </div>
 
   <script>
-    // ---- Debug switch (shows why it didn't fire) ----
-    const DEBUG = true;
-  
-    // ---- Math utils ----
+    // ---- ultra-simple, accelerometer-only circle detector ----
     const TAU = Math.PI * 2;
-    const DEG = Math.PI / 180;
-    const clamp = (x,a,b)=>Math.max(a,Math.min(b,x));
+  
+    // helpers
     const unwrap = d => (d > Math.PI ? d - TAU : d < -Math.PI ? d + TAU : d);
     const hypot3 = (x,y,z)=>Math.sqrt(x*x+y*y+z*z);
     function cross(a,b){ return {x:a.y*b.z - a.z*b.y, y:a.z*b.x - a.x*b.z, z:a.x*b.y - a.y*b.x}; }
-    function norm(v){ const n=hypot3(v.x,v.y,v.z)||1; return {x:v.x/n,y:v.y/n,z:v.z/n}; }
-    function median(arr){ if(!arr.length) return 0; const s=[...arr].sort((a,b)=>a-b); const m=Math.floor(s.length/2); return s.length%2?s[m]:(s[m-1]+s[m])/2; }
-    function mad(arr, m=null){ if(!arr.length) return 0; if(m==null) m=median(arr); const dev=arr.map(x=>Math.abs(x-m)); return median(dev); }
+    function norm(v){ const n = hypot3(v.x,v.y,v.z)||1; return {x:v.x/n,y:v.y/n,z:v.z/n}; }
   
-    class GentleCircleDetector {
+    class SimpleCircle {
       constructor(canvas, dotEl){
         this.canvas = canvas; this.ctx = canvas.getContext('2d'); this.dotEl = dotEl;
   
-        // -------- Tunables (made friendlier) --------
-        // Detect "almost full" revolution
-        // Detect slower, gentler circles
-        this.omegaMin         = 0.25;      // was 0.40 (rad/s)
-        this.aNoiseFloor      = 0.05;      // was 0.10 (m/s^2)
-        this.progressTarget   = TAU * 0.80; // was TAU * 0.85 (~288° target)
-        this.signCoherenceMin = 0.60;      // was 0.70
-        this.segMaxDur        = 12.0;      // was 10.0 (allow slower revs)
-
-        // Radius window/stability → converge faster, more tolerant
-        this.rWin    = 0.60;   // was 1.2 (seconds)
-        this.rCoVMax = 0.60;   // was 0.45
-
-        // Anti “spin on table” veto → less likely to kill gentle moves
-        this.yawSpinVeto      = 140;   // was 100 (deg/s)
-        this.spinLinearThresh = 0.80;  // was 1.0 (m/s^2)
-
+        // -------- only a few friendly knobs ----------
+        this.progressTarget = TAU * 0.80;  // ~288° to count as "almost full"
+        this.aMin          = 0.06;         // m/s²: tiny accel floor (prevents pure noise)
+        this.segMinDur     = 0.20;         // s: too fast = reject
+        this.segMaxDur     = 12.0;         // s: too slow = reject
+        this.gapMsAllow    = 400;          // ms: brief pauses allowed
   
-        // Gravity LPF (no gyro needed to estimate g)
-        this.gTau = 0.25;                    // s
+        // gravity lp
+        this.gTau = 0.25;                  // s
   
-        // -------- State --------
+        // state
         this.g = null; this.lastT = 0;
-        this.uLP = 0; this.vLP = 0;          // smoothed planar accel
-        this.theta = 0; this.prevTheta = null;
-        this.thetaStart = 0; this.progress = 0;
-        this.posDur = 0; this.negDur = 0;
-        this.segStartT = null; this.lastGoodMs = 0; this.gapMsAllow = 320;
+        this.uLP = 0; this.vLP = 0;
+        this.prevTheta = null;
+        this.angleAccum = 0;               // integrated |Δθ|
+        this.progress = 0;
+        this.segStartT = null; this.lastGoodMs = 0;
   
-        this.rBuf = []; // {t, r}
-        this.lastRR = {x:0,y:0,z:0};         // gyro (for veto only)
-        this.lastDetectMs = 0; this.cooldownMs = 1500;
-  
-        // UI/canvas
-        this.dpr = Math.max(1, window.devicePixelRatio||1);
+        // canvas ui
+        this.dpr = Math.max(1, window.devicePixelRatio || 1);
         this.uiAlpha = 0.25;
         window.addEventListener('resize', () => { this.resize(); this.resetCanvas(); }, {passive:true});
         this.resize(); this.resetCanvas();
-  
-        this.debugEl = document.getElementById('debugInfo');
-        if (!this.debugEl && DEBUG) {
-          const host = document.querySelector('.container') || document.body;
-          this.debugEl = document.createElement('div');
-          this.debugEl.id = 'debugInfo';
-          this.debugEl.style.cssText = 'margin-top:6px;font:12px ui-monospace,monospace;opacity:.9';
-          host.appendChild(this.debugEl);
-        }
       }
   
       resize(){
         const cw=this.canvas.clientWidth, ch=this.canvas.clientHeight;
-        this.canvas.width = Math.floor(cw*this.dpr);
-        this.canvas.height = Math.floor(ch*this.dpr);
+        this.canvas.width=Math.floor(cw*this.dpr);
+        this.canvas.height=Math.floor(ch*this.dpr);
         this.w=this.canvas.width; this.h=this.canvas.height;
         this.cx=this.w/2; this.cy=this.h/2;
         this.padPx=6*this.dpr; this.R=Math.min(this.cx,this.cy)-this.padPx;
-        this.ring = this.R * 0.60; // fixed ring we draw on
+        this.ring = this.R*0.60;
   
         this.ctx.setTransform(1,0,0,1,0,0);
         this.ctx.lineWidth=2*this.dpr;
         this.ctx.lineCap='round'; this.ctx.lineJoin='round';
         this.ctx.strokeStyle='rgba(255,255,255,0.95)';
-        this.ctx.fillStyle='rgba(255,255,255,0.95)';
       }
   
       resetCanvas(){
         this.ctx.clearRect(0,0,this.w,this.h);
-        this.ctx.save(); this.ctx.globalAlpha=0.18;
+        // boundary
+        this.ctx.save(); this.ctx.globalAlpha=.18;
         this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R,0,TAU); this.ctx.stroke(); this.ctx.restore();
+        // clip inside circle
         this.ctx.save(); this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R - this.ctx.lineWidth*0.5, 0, TAU); this.ctx.clip();
         this.pathStarted=false;
   
-        this.prevTheta=null; this.theta=0; this.thetaStart=0;
-        this.progress=0; this.posDur=0; this.negDur=0;
-        this.segStartT=null; this.lastGoodMs=0; this.rBuf.length=0;
+        // reset segment/progress
+        this.prevTheta=null;
+        this.angleAccum=0; this.progress=0;
+        this.segStartT=null; this.lastGoodMs=0;
         this._lastXPix=this.cx; this._lastYPix=this.cy;
         this._renderProgress(); this._moveDot();
       }
   
-      addSample(acc, accG, rr){
+      addSample(acc, accG){
         const now = performance.now();
-        const dt = this.lastT ? Math.max(0.001,(now - this.lastT)/1000) : 0.016;
+        const dt = this.lastT ? Math.max(0.001, (now - this.lastT)/1000) : 0.016;
         this.lastT = now;
   
-        if (rr) this.lastRR = {x: rr.beta||0, y: rr.gamma||0, z: rr.alpha||0};
-  
-        // ---- Gravity init/update (robust) ----
-        const haveG = accG && Number.isFinite(accG.x);
+        // --- gravity init/update (robust & simple) ---
         if (!this.g) {
-          if (haveG) this.g = {x:accG.x, y:accG.y, z:accG.z};
-          else if (acc && Number.isFinite(acc.x)) {
+          if (accG && Number.isFinite(accG.x)) {
+            this.g = {x:accG.x, y:accG.y, z:accG.z};
+          } else if (acc && Number.isFinite(acc.x)) {
             const mag = hypot3(acc.x,acc.y,acc.z);
-            if (mag > 7.5) this.g = {x:acc.x, y:acc.y, z:acc.z};
-            else return;
-          } else return;
+            if (mag > 7.5) { this.g = {x:acc.x, y:acc.y, z:acc.z}; } else { return; }
+          } else { return; }
         } else {
           const a = Math.exp(-dt/this.gTau);
-          if (haveG) {
+          if (accG && Number.isFinite(accG.x)) {
             this.g.x = a*this.g.x + (1-a)*accG.x;
             this.g.y = a*this.g.y + (1-a)*accG.y;
             this.g.z = a*this.g.z + (1-a)*accG.z;
-          } else if (acc && Number.isFinite(acc.x)) {
-            const mag = hypot3(acc.x,acc.y,acc.z);
-            if (mag > 8.5 && mag < 11.5) {
-              this.g.x = a*this.g.x + (1-a)*acc.x;
-              this.g.y = a*this.g.y + (1-a)*acc.y;
-              this.g.z = a*this.g.z + (1-a)*acc.z;
-            }
           }
         }
   
-        // ---- Linear accel & planar projection ----
+        // --- linear acceleration & planar projection ---
         let ax=0, ay=0, az=0;
         if (acc && Number.isFinite(acc.x)) { ax=acc.x; ay=acc.y; az=acc.z; }
-        else if (haveG) { ax=accG.x - this.g.x; ay=accG.y - this.g.y; az=accG.z - this.g.z; }
+        else if (accG) { ax=accG.x - this.g.x; ay=accG.y - this.g.y; az=accG.z - this.g.z; }
   
         const gn = norm(this.g);
         const ref = Math.abs(gn.z)<0.9 ? {x:0,y:0,z:1} : {x:1,y:0,z:0};
-        const e1 = norm(cross(gn,ref)), e2 = cross(gn,e1);
-  
+        const e1 = norm(cross(gn, ref)), e2 = cross(gn, e1);
         const dotg = ax*gn.x + ay*gn.y + az*gn.z;
         const px = ax - dotg*gn.x, py = ay - dotg*gn.y, pz = az - dotg*gn.z;
   
         const u = px*e1.x + py*e1.y + pz*e1.z;
         const v = px*e2.x + py*e2.y + pz*e2.z;
   
-        // Smooth planar vector
-        const beta = Math.exp(-dt/0.06); // ~60ms
+        // small smoothing for stability
+        const beta = Math.exp(-dt/0.06);
         this.uLP = beta*this.uLP + (1-beta)*u;
         this.vLP = beta*this.vLP + (1-beta)*v;
+  
         const aPlanar = Math.hypot(this.uLP, this.vLP);
-  
-        // Angle and angular rate from planar accel
         const thetaNow = Math.atan2(this.vLP, this.uLP);
-        if (this.prevTheta==null) this.prevTheta = thetaNow;
-        const dtheta = unwrap(thetaNow - this.prevTheta);
-        const omega = Math.abs(dtheta)/dt;
+        if (this.prevTheta == null) this.prevTheta = thetaNow;
   
-        // Draw path regardless of gating (so you always see motion)
+        // always draw the path so you see motion
         const x = this.cx + this.ring*Math.cos(thetaNow);
         const y = this.cy + this.ring*Math.sin(thetaNow);
         if (!this.pathStarted) { this.ctx.beginPath(); this.ctx.moveTo(x,y); this.pathStarted=true; }
         else { this.ctx.lineTo(x,y); this.ctx.stroke(); }
-        this._lastXPix = x; this._lastYPix = y;
-        this._moveDot();
+        this._lastXPix=x; this._lastYPix=y; this._moveDot();
   
-        // ---- Radius estimate & stability (reject shakes/jerks) ----
-        let rInst = Infinity;
-        if (omega >= this.omegaMin && aPlanar >= this.aNoiseFloor) rInst = aPlanar / (omega*omega + 1e-9);
-        this._pushRadius(now, rInst);
-        const rStats = this._radiusStats(now);
-        const radiusOk = rStats.valid &&
-                         rStats.med >= this.rMin && rStats.med <= this.rMax &&
-                         rStats.cov <= this.rCoVMax;
+        // --- super-minimal gate: need a tiny bit of acceleration ---
+        if (aPlanar >= this.aMin) {
+          if (this.segStartT == null) { this.segStartT = now; this.angleAccum = 0; }
   
-        // ---- Anti-spin veto (phone spinning about gravity) ----
-        const w_par_gyro = (this.lastRR.x*gn.x + this.lastRR.y*gn.y + this.lastRR.z*gn.z); // deg/s
-        const spinVeto = Math.abs(w_par_gyro) > this.yawSpinVeto && aPlanar < this.spinLinearThresh;
-  
-        // ---- Gate for PROGRESS/DETECTION (adaptive; no hard accel floor) ----
-        const gate = !spinVeto && omega >= this.omegaMin && radiusOk;
-
-  
-        // Debug line (why didn't it fire?)
-        if (DEBUG && this.debugEl) {
-          this.debugEl.textContent =
-            `gate:${gate?'1':'0'}  prog:${(Math.min(1, Math.abs(this.theta - this.thetaStart)/this.progressTarget)*100|0)}%`+
-            `  a:${aPlanar.toFixed(2)}  ω:${(omega/DEG).toFixed(0)}°/s`+
-            `  r:${isFinite(rInst)?rInst.toFixed(2):'∞'}  r_med:${rStats.med.toFixed(2)} r_cov:${rStats.cov.toFixed(2)}`+
-            `  yaw:${w_par_gyro.toFixed(0)}°/s veto:${spinVeto?'Y':'N'}`;
-        }
-  
-        // ---- Integrate & detect ----
-        if (gate) {
-          if (this.segStartT==null) { this.segStartT=now; this.thetaStart=this.theta; this.posDur=0; this.negDur=0; }
-          this.theta += dtheta;
-          if (dtheta>0) this.posDur += dt; else if (dtheta<0) this.negDur += dt;
+          const dtheta = unwrap(thetaNow - this.prevTheta);
+          this.angleAccum += Math.abs(dtheta);
   
           const prevProg = this.progress;
-          const traveled = Math.abs(this.theta - this.thetaStart);
-          this.progress = Math.min(1, traveled / this.progressTarget);
+          this.progress = Math.min(1, this.angleAccum / this.progressTarget);
           this._renderProgress();
   
-          // Edge trigger crossing 100%
-          if (prevProg < 1 && this.progress >= 1) this._maybeDetect(now, rStats);
+          // edge-trigger detection at 100% with a loose duration check
+          if (prevProg < 1 && this.progress >= 1) {
+            const dur = (now - this.segStartT)/1000;
+            if (dur >= this.segMinDur && dur <= this.segMaxDur) {
+              this._onDetected();
+              this._resetSegment(now);
+            } else {
+              // outside duration: just reset progress
+              this._resetSegment(now);
+            }
+          }
           this.lastGoodMs = now;
         } else {
-          if (this.segStartT!=null) {
+          // Too little accel: allow short pause, then reset segment (keep drawing)
+          if (this.segStartT != null) {
             if (!this.lastGoodMs) this.lastGoodMs = now;
             if ((now - this.lastGoodMs) > this.gapMsAllow) this._resetSegment(now);
           }
-          // gentle decay so bar doesn't “stick”
+          // gentle visual decay
           this.progress = Math.max(0, this.progress - 0.02);
           this._renderProgress();
         }
   
         this.prevTheta = thetaNow;
-      }
-  
-      // ---- rolling radius stats ----
-      _pushRadius(t, r){
-        const start = t - this.rWin*1000;
-        if (isFinite(r)) this.rBuf.push({t, r: clamp(r, 0, 10)});
-        while (this.rBuf.length && this.rBuf[0].t < start) this.rBuf.shift();
-      }
-      _radiusStats(t){
-        const start = t - this.rWin*1000;
-        const arr = this.rBuf.filter(x=>x.t>=start).map(x=>x.r);
-        if (arr.length < 6) return {valid:false, med:0, cov:1};
-        const med = median(arr);
-        const m = mad(arr, med);
-        const cov = med>1e-6 ? (1.4826*m)/med : 1;
-        return {valid:true, med, cov};
-      }
-  
-      _maybeDetect(now, rStats){
-        const dur = this.segStartT ? (now - this.segStartT)/1000 : 0;
-        const totalTurn = this.posDur + this.negDur;
-        const signCoh = totalTurn>0 ? Math.max(this.posDur, this.negDur)/totalTurn : 0;
-        const withinDur = (dur>=this.segMinDur && dur<=this.segMaxDur);
-        const cooled = (now - this.lastDetectMs) > this.cooldownMs;
-  
-        if (withinDur && signCoh >= this.signCoherenceMin && rStats.valid && rStats.cov <= this.rCoVMax && cooled) {
-          this.lastDetectMs = now;
-          this._onDetected();
-          this._resetSegment(now);
-        }
+        // optional numeric readout (if you have a span#planarA)
+        const p = document.getElementById('planarA'); if (p) p.textContent = aPlanar.toFixed(2);
       }
   
       _resetSegment(now){
-        this.segStartT=null; this.thetaStart=this.theta;
-        this.progress=0; this.posDur=0; this.negDur=0;
+        this.segStartT = null;
+        this.angleAccum = 0;
+        this.progress = 0;
         this._renderProgress();
       }
   
@@ -355,25 +270,21 @@
       }
   
       _onDetected(){
+        // flash + status
         document.body.style.background='linear-gradient(135deg, #4CAF50 0%, #45a049 100%)';
         setTimeout(()=>{ document.body.style.background='linear-gradient(135deg, #667eea 0%, #764ba2 100%)'; }, 700);
-  
-        const status=document.getElementById('status');
-        if (status){ status.textContent='🎉 FULL REVOLUTION'; status.className='status detecting';
-          setTimeout(()=>{ status.textContent='Listening… draw a small wrist/elbow circle'; status.className='status active'; }, 1500);
-        }
-  
-        const history=document.getElementById('history');
-        if (history){
-          const div=document.createElement('div'); div.className='detection-item';
-          div.textContent=new Date().toLocaleTimeString()+': Full revolution'; history.appendChild(div);
-        }
+        const s=document.getElementById('status');
+        if (s){ s.textContent='🎉 FULL REVOLUTION'; s.className='status detecting';
+          setTimeout(()=>{ s.textContent='Listening… draw a small wrist circle'; s.className='status active'; }, 1500); }
+        // history
+        const h=document.getElementById('history');
+        if (h){ const div=document.createElement('div'); div.className='detection-item';
+          div.textContent=new Date().toLocaleTimeString()+': Full revolution'; h.appendChild(div); }
         if ('vibrate' in navigator) navigator.vibrate([160,100,160]);
-        console.log('✅ Full revolution detected');
       }
     }
   
-    // ---- Wiring ----
+    // ---- wiring ----
     let detector=null, isActive=false;
   
     function startDetection(){
@@ -387,7 +298,7 @@
   
     function start(){
       if (isActive) return;
-      detector = new GentleCircleDetector(
+      detector = new SimpleCircle(
         document.getElementById('pathCanvas'),
         document.getElementById('gyroDot')
       );
@@ -395,7 +306,7 @@
       isActive=true;
   
       const st=document.getElementById('status');
-      if (st){ st.textContent='Listening… draw a small wrist/elbow circle'; st.className='status active'; }
+      if (st){ st.textContent='Listening… draw a small wrist circle'; st.className='status active'; }
       document.getElementById('startBtn').style.display='none';
       document.getElementById('stopBtn').style.display='inline-block';
     }
@@ -411,11 +322,8 @@
     }
   
     function onMotion(e){
-      detector.addSample(
-        e.acceleration || null,
-        e.accelerationIncludingGravity || null,
-        e.rotationRate || null // gyro only used for spin veto
-      );
+      // accelerometer only
+      detector.addSample(e.acceleration || null, e.accelerationIncludingGravity || null);
     }
   
     function clearHistory(){
@@ -425,5 +333,6 @@
       if (detector) detector.resetCanvas();
     }
   </script>
+  
 </body>
 </html>
